# migen-axi

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
specs/: gpmc_burst_rd.js  gpmc_burst_wr.js
src/migen_axi/cores/: ps7.py
src/migen_axi/integration/: __init__.py  soc_core.py
src/migen_axi/interconnect/: __init__.py  axi.py  axi2csr.py  axi4.py  axi_dma.py  dmac_bus.py  fraction.py  gpmc2axi.py  misc.py  sram.py  stream.py  stream2axi.py  wrshim.py
src/migen_misc/cores/: ps7.py
src/migen_misc/integration/: soc_core.py
src/migen_misc/interconnect/: __init__.py  axi.py  axi2csr.py  axi_dma.py  dmac.py  dmac_bus.py  stream2axi.py
src/tools/: bitstream_fix.py
tests/: common.py  test_integration.py  test_interconnect.py  test_platform.py  test_ps7.py  test_stream_converter.py
tests/interconnect/: test_axi4.py  test_fraction.py  test_stream.py
