[metadata]
name = migen-misc
author = Alain Péteut
author-email = alain.peteut@yahoo.com
home-page = https://github.com/peteut/migen-misc
summary = Some migen modules

[entry_points]
console_scripts =
    bitstream-fix = tools.bitstream_fix:cli

[tool:pytest]
testpaths = tests
addopts = --flake8
flake8-ignore =
    F405
flake8-max-line-length = 79
timeout = 10

[flake8]
ignore = F405
exlude = __init__.py
