[metadata]
name = migen-axi
author = Alain Péteut
author_email = alain.peteut@yahoo.com
home_page = https://github.com/peteut/migen-axi
summary = Some migen modules

[tool:pytest]
testpaths = tests
addopts = --flake8
flake8-ignore =
    F405
flake8-max-line-length = 79
timeout = 10

[flake8]
ignore = F405
exlude = __init__.py
